pkg/lang/testdata/ub/config/invalid/configurations-bare-call.ub
factory: {
  configurations: { aws.default: { region: pick() } }
}
